# first_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  board.py  config.py  db.py  deps.py  main.py  schemas.py
backend/app/routers/: ai.py  auth.py  board.py
backend/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_ai_chat.py  test_auth.py  test_board.py
docs/: DATABASE.md  PLAN.md  schema.json
frontend/: AGENTS.md  package-lock.json  playwright.config.ts
frontend/src/app/: page.test.tsx  page.tsx
frontend/src/components/: ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LoginForm.tsx
frontend/src/lib/: api.ts  kanban.test.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.sh  stop.bat  stop.sh
