[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "itsdangerous>=2.2.0",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# ai.py embeds a long multi-line prompt template with JSON examples;
# wrapping those lines would hurt readability without adding anything.
"app/ai.py" = ["E501"]
